--- a/app/views/static_pages/18wheeler-accidents.html.erb
+++ b/app/views/static_pages/18wheeler-accidents.html.erb
@@ -22,40 +22,28 @@
 				<p>18-wheeler litigation can be very complex. That is why it is essential for 18-wheeler victims to seek legal assistance for their accident, which requires an attorney who is familiar with both state and federal law.</p>
 			</div>
 
-			<div class="blk1"><div class="over">
-				<div class="banner">
-					<h3>What Should You Know?</h3>
-					<p>Noel B. Leonard will fight to get the justice you deserve.</p>
-					<hr class="fancy">
-				</div>
+			<div class="blk1">
+				<div class="over">
+					<div class="banner">
+						<h3>What Should You Know?</h3>
+						<p>Noel B. Leonard will fight to get the justice you deserve.</p>
+						<hr class="fancy">
+					</div>
 
-				<h4>Alabama trucking companies are required to comply with federal safety regulations meant to enhance the safety of both the roads, and the citizens who drive on them.</h4>
-				<div class="a">
-					<p><b>If any of these federal regulations are violated, you may be entitled to file a lawsuit against the trucking company.</b></p>
+					<h4>Alabama trucking companies are required to comply with federal safety regulations meant to enhance the safety of both the roads, and the citizens who drive on them.</h4>
+					<div class="a">
+						<p><b>If any of these federal regulations are violated, you may be entitled to file a lawsuit against the trucking company.</b></p>
+					</div>
+					<div class="b">
+						<p><b>Noel B. Leonard has the experience necessary to determine whether such a violation occurred.</b></p>
+					</div>
 				</div>
-				<div class="b">
-					<p><b>Noel B. Leonard has the experience necessary to determine whether such a violation occurred.</b></p>
-				</div>
-			</div></div>
+			</div>
 		</div>
 	</div>
 
 		<div class="sec2">
 			<div class="consult-box">
-							<!-- <div class="banner">
-								<h3>What Should You Know?</h3>
-								<p>Noel B. Leonard will fight to get the justice you deserve.</p>
-								<hr class="fancy">
-							</div>
-
-							<h4>Alabama trucking companies are required to comply with federal safety regulations meant to enhance the safety of both the roads, and the citizens who drive on them.</h4>
-							<div class="a">
-								<p><b>If any of these federal regulations are violated, you may be entitled to file a lawsuit against the trucking company.</b></p>
-							</div>
-							<div class="b">
-								<p><b>Noel B. Leonard has the experience necessary to determine whether such a violation occurred.</b></p>
-							</div>
-						</div> -->
 					<h2>Let Noel B. Leonard <span>fight for you.</span></h2>
 					<h4>If you live in Mobile, Baldwin, or Escambia County, and have been involved in an 18-wheeler accident, schedule a consult today.</h4>
 					<h4>Let Noel and his firm help you to understand your rights, and fight for the settlement you deserve.</h4>
@@ -77,10 +65,5 @@
 						<li class="pleft-3"><b>And Many More</b></li>
 					</ul>
 				</div>
-			<!-- </div> -->
-
-				<!-- <p>If you live in Mobile, Baldwin, or Escambia County, and have been involved in an 18-wheeler accident, Foley attorney, Noel B. Leonard is ready to pursue justice on behalf of you or a dearly departed loved one.</p>
-				<p>Contact Noel B. Leonard now, to schedule a legal consultation. Discuss the facts of your 18-wheeler accident case, and receive the settlement you deserve to begin the healing you need. </p>
-				<p>Call us today (251) 943-8638, or fill out our Case Evaluation Form, and we will contact you as soon as possible.</p>-->
 		</div>
 </div>
