--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -8,33 +8,12 @@
 			<div class="title-line"></div>
 			<div class="clearfix"></div>
 			<h3>Attorney, LLC</h3>
-			<!-- 	<div class="text">
-				<h4 class="open">"Accidents happen...but finding the right attorney doesn't happen by accident."</h4>
-			 		<p>Noel B. Leonard, Attorney LLC is a law firm committed to providing excellent legal service within the state of Alabama.
-			 		We are located in Foley, and represent clients from <span>Mobile</span>, <span>Baldwin</span>, and <span>Escambia</span> counties.</p> -->
-			<!-- </div> -->
 		</div>
 	</div>
 
+
 		<div class="body">
-			<div class="s2">
-				<!-- <div class="practice-claims">
-					<%=link_to "/auto_accidents_path", class: 'practice-boxes-op bike' do %>
-						<i class="fa fa-motorcycle"></i>
-						<h4>Motorcyle Accident <br>Injury Claims</h4>
-					<% end %>
-
-					<%=link_to "/trucker_accidents_path", class: 'practice-boxes-op auto' do %>
-						<i class="fa fa-car"></i>
-						<h4>Auto Accident <br>Injury Claims</h4>
-					<% end %>
-
-					<%=link_to "/motorcycle_accidents_path", class: 'practice-boxes-op trucker' do %>
-						<i class="fa fa-truck"></i>
-						<h4>18-Wheeler <br>Accident Victims</h4>
-					<% end %>
-				</div> -->
-
+			<!-- <div class="s2"> -->
 				<div class="sidebar">
 					<div class="top">
 						<p>Noel B. Leonard, Attorney LLC is a law firm committed to providing excellent legal service within the state of Alabama.</p>
@@ -83,7 +62,7 @@
 						<% end %>
 					</div>
 				</div>
-			</div>
+			<!-- </div> -->
 		</div>
 	</div>
 
