--- a/app/views/static_pages/auto-accidents.html.erb
+++ b/app/views/static_pages/auto-accidents.html.erb
@@ -15,7 +15,7 @@
 	<div class="container">
 		<table class="boxes">
 			<tbody>
-				<tr>
+				<tr class="one">
 					<td>
 						<p>Despite countless safety improvements from the auto industry over the years, thousands of people are still injured or killed annually in car accidents.
 						If you suffer from an injury caused by an auto accident, you may be entitled to compensation.</p>
