--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,160 +1,122 @@
 @import "variables";
 @import "mixins";
 
-header.header-alt {@include sec-default(); display: none;
-  background-color: $white;
+// header.header-alt {@include sec-default(); display: none;
+//   background-color: $white;
 
-    #top-bar {  @include sec-default(); padding: 5px 0px 0;
-      background-color: $dk-blue;
+//     #top-bar {  @include sec-default(); padding: 5px 0px 0;
+//       background-color: $dk-blue;
 
-      .tb-block {width:45%; float: right;}
-      h5 {color: $white; display: inline-block; font-size: 14px; margin: 10px 0 0 10px; line-height: 1em; float: none;}
-      span {display: inline-block; color: $white; margin: 0 10px; font-size: 18px;}
-      h5 a {color: $white;}
-    }
+//       .tb-block {width:45%; float: right;}
+//       h5 {color: $white; display: inline-block; font-size: 14px; margin: 10px 0 0 10px; line-height: 1em; float: none;}
+//       span {display: inline-block; color: $white; margin: 0 10px; font-size: 18px;}
+//       h5 a {color: $white;}
+//     }
 
-    .social-links { display: inline-block;
-      li { display: inline-block; margin-right:10px;
-        a { background-color: transparent; color: $white; font-size: 15px;
-          &:hover {color: white;}
-        }
-      }
-    }
+//     .social-links { display: inline-block;
+//       li { display: inline-block; margin-right:10px;
+//         a { background-color: transparent; color: $white; font-size: 15px;
+//           &:hover {color: white;}
+//         }
+//       }
+//     }
 
-    .main-header {@include sec-default(); padding: 10px 75px 5px;}
-    .logo-block {display: inline-block; float: left; width: 40%; padding: 10px 0; margin-left: 50px;
-      // margin-left: 10%;
-      .logo-img {height:85px; float: left; margin-right:6px;}
-      h3 {margin-top:25px; font-size: 22px;}
-    }
-    .main-block {display: inline-block; float: right; width: 40%; margin-top:14px;
-      h4 {display: inline-block; color: $dark; text-align: center;
-        span {font-weight: normal; font-size: 15px;}
-        &.address {margin: 0 35px;text-align: center;}
-       .call-link{color: $blue; font-size: 22px; font-weight: bold;}
-      }
-      .esp-link h4 { font-family: $open; margin-left: 70px; font-style: italic;background-color: $offwhite; padding: 10px;}
-    }
-    .mega-tab {@include sec-default(); background-color: $dk-blue; list-style:none;
-      text-align: center; float: left;
-      li{display:inline-block; margin: 10px 20px 0;
-          &:last-child{margin-right: 5px;}
-          &:first-child{margin-left: 0px;}
-          a{ font-size: 15px; line-height: 2em; color: $white; text-transform: uppercase; }
-      }
+//     .main-header {@include sec-default(); padding: 10px 75px 5px;}
+//     .logo-block {display: inline-block; float: left; width: 40%; padding: 10px 0; margin-left: 50px;
+//       .logo-img {height:85px; float: left; margin-right:6px;}
+//       h3 {margin-top:25px; font-size: 22px;}
+//     }
+//     .main-block {display: inline-block; float: right; width: 40%; margin-top:14px;
+//       h4 {display: inline-block; color: $dark; text-align: center;
+//         span {font-weight: normal; font-size: 15px;}
+//         &.address {margin: 0 35px;text-align: center;}
+//        .call-link{color: $blue; font-size: 22px; font-weight: bold;}
+//       }
+//       .esp-link h4 { font-family: $open; margin-left: 70px; font-style: italic;background-color: $offwhite; padding: 10px;}
+//     }
+//     .mega-tab {@include sec-default(); background-color: $dk-blue; list-style:none;
+//       text-align: center; float: left;
+//       li{display:inline-block; margin: 10px 20px 0;
+//           &:last-child{margin-right: 5px;}
+//           &:first-child{margin-left: 0px;}
+//           a{ font-size: 15px; line-height: 2em; color: $white; text-transform: uppercase; }
+//       }
 
-      .dropdown{width:auto;margin:0;margin-top:-1px;position:absolute;z-index:999;display:none;}
-      .has-child:hover >.dropdown{display:block;width:175px; }
-      .dropdown .dropdown-items{list-style:none;padding:0;margin:0;text-transform:uppercase;}
-      .dropdown .dropdown-inner{background: $navy;padding:0px;box-shadow:0 3px 5px 0 rgba($black,0.2); }
+//       .dropdown{width:auto;margin:0;margin-top:-1px;position:absolute;z-index:999;display:none;}
+//       .has-child:hover >.dropdown{display:block;width:175px; }
+//       .dropdown .dropdown-items{list-style:none;padding:0;margin:0;text-transform:uppercase;}
+//       .dropdown .dropdown-inner{background: $navy;padding:0px;box-shadow:0 3px 5px 0 rgba($black,0.2); }
 
-      .dropdown li.menu-item{margin-left:0;display:block;padding:0;position:relative;width: 100%; border-top: none;border-bottom: 1px dotted rgba($light, .3);
-          &:last-child {border-bottom: none;}
-          a{width:100%;display:block;padding:10px;color:$white;cursor:pointer;font-size:14px; line-height: 2em;
-              &:hover{color:$hcolor}
-          }
-      }
-    }
+//       .dropdown li.menu-item{margin-left:0;display:block;padding:0;position:relative;width: 100%; border-top: none;border-bottom: 1px dotted rgba($light, .3);
+//           &:last-child {border-bottom: none;}
+//           a{width:100%;display:block;padding:10px;color:$white;cursor:pointer;font-size:14px; line-height: 2em;
+//               &:hover{color:$hcolor}
+//           }
+//       }
+//     }
 
-    @include bp(tb) {
-      #top-bar {padding-right:0px;
-        .tb-block {width:75%; float: right; margin-right: 20px;}
-      }
+//     @include bp(tb) {
+//       #top-bar {padding-right:0px;
+//         .tb-block {width:75%; float: right; margin-right: 20px;}
+//       }
 
-      .mega-tab { ul{padding-left:10px;} li{ margin: 10px 15px 0;}}
-    }
+//       .mega-tab { ul{padding-left:10px;} li{ margin: 10px 15px 0;}}
+//     }
 
-    @include bp(md) {
-      #top-bar {
-        .tb-block {width:100%; float: none; margin: auto;}
-      }
-      .main-header {padding: 10px 30px 5px;}
-      .logo-block { width: 40%;}
-      .main-block {width: 55%; margin-top:5px;}
-      .mega-tab {display: none}
-    }
-}
+//     @include bp(md) {
+//       #top-bar {
+//         .tb-block {width:100%; float: none; margin: auto;}
+//       }
+//       .main-header {padding: 10px 30px 5px;}
+//       .logo-block { width: 40%;}
+//       .main-block {width: 55%; margin-top:5px;}
+//       .mega-tab {display: none}
+//     }
+// }
 
-header.header-new {@include sec-default();
-  // background-color: $white;
-  background-color: $navy;
+header.header-new {
+  @include sec-default(); background-color: $navy;
 
-      // h5 {color: $white; display: inline-block; font-size: 14px; margin: 10px 0 0 10px; line-height: 1em; float: none;}
-      // span {display: inline-block; color: $white; margin: 0 10px; font-size: 18px;}
-      // h5 a {color: $white;}
+    .main-header {@include sec-default(); padding: 10px 90px 5px;}
+    // .logo-block {display: inline-block; float: left; width: 30%; padding: 5px 0;
+      .logo-img {height:95px; float: left;}
+    // }
 
-    .social-links { display: inline-block;
-      li { display: inline-block; margin-right:10px;
-        a { background-color: transparent; color: $white; font-size: 15px;
-          &:hover {color: white;}
-        }
-      }
-    }
-
-    .main-header {@include sec-default(); padding: 10px 0 5px;}
-    .logo-block {display: inline-block; float: left; width: 30%; padding: 10px 0;
-      .logo-img {height:95px; float: left; margin-right:6px;}
-      h3 {margin-top:25px; font-size: 22px;}
-    }
-    .main-block {display: inline-block; float: right; width: 55%; margin-top:35px; text-align: center;
-      h4.call, h4.eval, .esp-link h4 {display: inline-block; color: $white; float: left; width: 33%;
+    .main-block {display: inline-block; float: right; margin-top:25px;
+      h4.call, h4.eval, .esp-link h4, ul.social-links {display: inline-block; color: $white; float: left; margin: 0 25px 0 15px;
         span {font-weight: normal; font-size: 15px;}
       }
       h4.eval { a {color: $white;}}
      .call-link{color: $blue; font-size: 22px; font-weight: bold;}
-    }
-    .mega-tab {@include sec-default(); list-style:none;
-      background-color: $offwhite;
-      text-align: center; float: left;
-      li{display:inline-block; margin: 10px 20px 0;
-        &:first-child{margin-left: 0px;}
-        a{ font-size: 15px; line-height: 2em; color: $dark; text-transform: uppercase; }
-        ul.social-links { padding-left: 0;
-          li { display: inline-block; margin-right:0px; a {font-size: 16px;}}
+
+      ul.social-links { margin:15px 10 0 0;
+        li { display: inline-block; float: left; margin-right: 10px;
+          &:last-child{margin-right: 0}
+          a {font-size: 16px;color: $white;}
         }
       }
-
-      .dropdown{width:auto;margin:0;margin-top:-1px;position:absolute;z-index:999;display:none;}
-      .has-child:hover >.dropdown{display:block;width:175px; }
-      .dropdown .dropdown-items{list-style:none;padding:0;margin:0;text-transform:uppercase;}
-      .dropdown .dropdown-inner{background: $navy;padding:0px;box-shadow:0 3px 5px 0 rgba($black,0.2); }
-
-      .dropdown li.menu-item{margin-left:0;display:block;padding:0;position:relative;width: 100%; border-top: none;border-bottom: 1px dotted rgba($light, .3);
-          &:last-child {border-bottom: none;}
-          a{width:100%;display:block;padding:10px;color:$white;cursor:pointer;font-size:14px; line-height: 2em;
-              &:hover{color:$hcolor}
-          }
-      }
     }
 
-    @include bp(tb) {
-      #top-bar {padding-right:0px;
-        .tb-block {width:75%; float: right; margin-right: 20px;}
+    .mega-tab {
+      @include sec-default();list-style:none;background-color: $offwhite;text-align: center;
+      li{display:inline-block; margin: 10px 20px 0;
+        &:first-child{margin-left: 0px;}
+        &:last-child{margin-right: 0px;}
+        a{ font-size: 15px; line-height: 2em; color: $dark; text-transform: uppercase; }
       }
-
-      .mega-tab { ul{padding-left:10px;} li{ margin: 10px 15px 0;}}
-    }
-
-    @include bp(md) {
-      #top-bar {
-        .tb-block {width:100%; float: none; margin: auto;}
-      }
-      .main-header {padding: 10px 30px 5px;}
-      .logo-block { width: 40%;}
-      .main-block {width: 55%; margin-top:5px;}
-      .mega-tab {display: none}
     }
 }
 
 
 #offcanvas-toggler {
   width: 40px;
-  float:right;
+  float:left;
   background-color:$white;
   padding: 10px 0 5px;
   text-align: center;
   border-radius: 4px;
-  border: 1px solid $dark;
+  border: 1px solid rgba($dark, .6);
+  margin-top:13px;
   display:none;
 
   h4 {color:$white; line-height:2em; padding-top:10px; }
@@ -170,7 +132,6 @@ header.header-new {@include sec-default();
       border-radius: 4px;
       background-color: $dark;
   }
-
 }
 .offcanvas-menu .offcanvas-inner .module ul > li > a:hover{color:$white; background:$dark}
 .offcanvas-menu .offcanvas-inner .module .menu .nav-child a{padding:4px 25px}
@@ -191,7 +152,6 @@ header.header-new {@include sec-default();
       }
   }
 }
-
 .offcanvas-menu{-webkit-transition:opacity 400ms cubic-bezier(0.7,0,0.3,1),right 400ms cubic-bezier(0.7,0,0.3,1); transition:opacity 400ms cubic-bezier(0.7,0,0.3,1),right 400ms cubic-bezier(0.7,0,0.3,1)}
 .body-innerwrapper:after{right:0}
 .offcanvas-menu{right:-280px}
@@ -205,8 +165,36 @@ h3.module-title{color: $white;}
 .menu .nav-child.small{font-size:inherit}
 
 
-@include bp(md) {
-  #offcanvas-toggler { display:inline-block; }
-  nav {display: none;}
+header.header-new {
+  @include bp(tb) {
+    #offcanvas-toggler { display:inline-block; }
+    .main-header {padding: 0;}
+    .logo-block { @include sec-default(); background-color: $white; padding: 5px;}
+    .logo-img{@include center-block();}
+
+    .main-block, .off-canvas {display: inline-block; float: left;}
+    .off-canvas {width: 10%; float: right; }
+
+    .main-block {width: 85%;  margin: 12px 0 10px; margin-left: 5%;
+      h4.call, h4.eval, .esp-link h4, ul.social-links {width:22%; float: left; margin:0 2% 0 1%; }
+      ul.social-links {margin-top:10px;  width:20%;}
+    }
+
+
+    .mega-tab {display: none;}
+  }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
 
