--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -71,17 +71,6 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 }
 
 .home {
-	// header.header-new {background-color: transparent; position: absolute;
-	// 	.mega-tab {display: none;}
-	// }
-
-	// .mega-tab {@include sec-default(); text-align:center; border-bottom: 1px solid #dfdfdf;
-	// 	li {display: inline-block; margin:15px 25px 10px;
- //      &:last-child{margin-right: 5px;}
- //      &:first-child{margin-left: 0px;}
- //      a{ font-size: 15px; line-height: 2em; color: $dark; text-transform: uppercase; }
- //    }
- //  }
 
 	.site-intro{
 		@include sec-default();
@@ -99,10 +88,8 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 		.title-block{
 			text-align: center;
 			width:50%;
-			// border: 1px solid rgba($silver, .1);
 			padding: 40px 30px;
 			margin-left: 5%;
-			// background-color: rgba($dark, .1);
 		}
 		.title-line {width: 65%; @include center-block(); height: 1px; background-color: rgba($silver, .4); margin-bottom: 10px;}
 		.text{width: 95%; @include center-block();padding-top:35px;}
@@ -144,7 +131,8 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 			p.second {font-weight: 600; font-size: 17px;}
 			h4 {font-weight: bold; color: $blue; font-family: $open; text-transform: uppercase;}
 		}
-		.portrait {width: 30%; display: inline-block; float: none; margin-left: 10%; }
+		.portrait {width:35%; display: inline-block; float: none; margin-left: 10%; margin-top:40px; }
+		.portrait-m {display: none;}
 		.break {@include sec-default(); padding-bottom: 40px;}
 	}
 
@@ -210,43 +198,185 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 
 	@include bp(tb) {
 		.site-intro{
-			height:450px;
-			background-position: top center;
+			height:500px;
 
-			.overlay {padding: 60px 45px;}
-			.title-block{
-				width:75%; padding: 30px;background-color: rgba($white, .35);
-				border: 1px solid $gray;
+			.overlay {
+			  padding-top: 60px;
+				background-color: rgba($dark, .7);
 			}
-			.title-line {width: 65%; @include center-block(); height: 1px; background-color: rgba($dark, .4); margin-bottom: 10px;}
-			.text{width:95%; padding-top:20px;}
-			h1 {font-size: 3em;}
-			h2 {font-size: 2em;}
-			h4{ font-size: 19px;}
+
+			.title-block{
+				width:70%;
+			}
+			.text{padding-top:15px;}
+			h1 {font-size: 3.5em;}
+			h2 {font-size: 2.5em;}
+		}
+
+		.practice-areas { padding: 30px 0 0;
+			.pa-s1 { width: 80%;
+				hr.fancy {width: 45%;}
+				p {padding: 0 20px;}
+			}
+
+			.pa-intro { margin-top: 40px; padding: 30px 0px 15px;
+				&::before {height: 200px;}
+			}
+			.portrait {margin-top: 60px;}
+		}
+	}
+
+	@include bp(md) {
+		.site-intro{
+			height:400px;
+			.overlay {padding-top: 40px;}
+			.title-block{width:85%;}
 		}
 
 		.practice-areas {
-			padding:40px 20px;
-			.pa-intro { width:95%; }
-			.pa-s1 { width: 55%; float: left;display: inline-block;}
-			.portrait-bg { display: none;}
+			.pa-s1 { width: 90%; }
+
+			.pa-intro { margin-top: 40px;
+				&::before { height: 180px;}
+			}
+
+			.pa-s2 { width: 85%; float: none; @include center-block(); padding-left: 0px;}
+
+			.portrait {display: none; }
+			.portrait-m {display: block; width: 70%; @include center-block(); margin-top: 30px;}
 		}
 
-		.home-sec1 {
-			.overlay{padding: 40px 20px; }
-			.info-box {padding: 30px 10px;}
-			.top {@include sec-default(); padding-bottom: 50px;
-				hr.fancy.dark.hlf {width:15%; margin-bottom: 40px;}
+		.home-sec1 { margin-top:30px;
+			.overlay{padding: 35px;}
+		}
+
+		.info-box-alt { padding: 30px 10px 15px;
+
+			.top {@include sec-default();
+				h4.pbi {font-weight: bold; font-family: $open; text-align: center; text-transform: uppercase;}
+				hr.fancy.dark.hlf {width:15%; margin-bottom: 55px;}
+			}
+
+			.practice-box { width: 85%; float: none; @include center-block();margin-bottom: 30px; height:210px;
+				&::before {background-color: rgba($dk-blue,.9);}
+				.content {display: block; padding: 15px;
+					p.last{margin-bottom: 25px;}
+				}
+
+				&.cbox {
+					.overlay {padding: 25px 0px 15px;  }
+					hr {margin: 15px auto 20px; }
+				}
 			}
 		}
+	}
 
-		.practice-box {display: block; width: 80%; @include center-block(); margin-bottom: 25px; height: 250px;
-			background-size: 55%;
-			&.bike {@include center-block();}
+	@include bp(mb) {
+		.site-intro{
+			height:350px;
+			.overlay {padding-top: 25px;}
+			.title-block{width:95%;}
+			h1 {font-size: 3em}
+			h2 {font-size: 2em;}
+			h3 {font-size: 20px;}
 		}
 
-		.text {width: 30%; float: left;display: inline-block; height: 100%;}
-		.content {width: 50%; float: right; height: 100%; }
+		.practice-areas {
+
+			.pa-s2 { width: 90%;}
+			.portrait-m {width: 75%;}
+		}
+
+		.home-sec1 { margin-top:30px;
+			.overlay{padding: 25px 15px;}
+		}
+
+		.info-box-alt { padding: 15px;
+			.top {
+				hr.fancy.dark.hlf {width:25%; margin-bottom: 35px;}
+			}
+
+			.practice-box { width: 100%; margin-bottom: 30px; height: 235px;
+				.pb-links { padding: 5px 7px;}
+				// &.trucker {margin-bottom: 10px;}
+				&.cbox {height: 180px;
+					// padding: 20px; background-image: none;
+					h4 {font-size: 17px;}
+				}
+			}
+		}
+	}
+
+	@include bp(ph) {
+		.site-intro{
+			height:280px;
+			.overlay{padding-top:15px;}
+			.title-block{width:100%; margin:0;}
+			h3 {font-size: 18px;}
+		}
+
+		.practice-areas {
+			.pa-s1 { width: 100%;}
+			.pa-s2 { width: 100%;
+				p.first {font-size: 16px;}}
+			.pa-intro {
+				h3 {font-size: 25px;}
+			}
+			.portrait-m {width: 75%;}
+		}
+
+		.home-sec1 { margin-top:30px;
+			.overlay{padding: 25px 15px;}
+		}
+
+		.info-box-alt { padding: 15px;
+			.top {
+				hr.fancy.dark.hlf {width:25%; margin-bottom: 35px;}
+			}
+
+			.practice-box { width: 100%; margin-bottom: 30px; height: 235px;
+				.pb-links { padding: 5px 7px;}
+				// &.trucker {margin-bottom: 10px;}
+				&.cbox {height: 180px;
+					// padding: 20px; background-image: none;
+					h4 {font-size: 17px;}
+				}
+			}
+		}
+	}
+
+	@include bp(xs) {
+		.site-intro{
+			height:280px;
+			.overlay{padding-top:5px;}
+			h1{font-size: 2.2em}
+			h2 {font-size: 1.5em; letter-spacing: 3px}
+			h3 {font-size: 17px}
+		}
+
+		.practice-areas {
+			.pa-intro { padding-top:10px;
+				h3 {font-size: 22px;}
+			}
+			.portrait-m {width: 85%;}
+		}
+
+		.home-sec1 { margin-top:30px;
+			.overlay{padding: 25px 15px;}
+		}
+
+		.info-box-alt { padding: 15px;
+			.top {
+				hr.fancy.dark.hlf {width:50%; margin-bottom: 25px;}
+			}
+
+			.practice-box {
+				height: 280px;@include sec-bgimage(); padding:0;
+				.text {@include sec-default(); padding: 7px 10px 5px; height: auto; hr{margin-bottom: 5px;} h4{margin-top:5px;}}
+				.content {@include sec-default(); height:auto }
+				p {font-size: 15px;}
+			}
+		}
 	}
 }
 
