--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -47,7 +47,8 @@
 					<p>Our firm will evaluate your case, and help file your claim, and make every effort to see that you receive proper compensation for your injuries sustained during the accident.</p>
 					<%= link_to "More About Us", about_path, class: 'fst-links one' %>
 			</div>
-			<%=image_tag('noel5.jpg', alt: 'Noel Leonard, Foley Attorney', class: 'img-responsive portrait') %>
+			<%=image_tag('noel-suit.jpg', alt: 'Noel Leonard, Foley Attorney', class: 'img-responsive portrait') %>
+			<%=image_tag('noel-mobile.jpg', alt: 'Noel Leonard, Foley Attorney', class: 'img-responsive portrait-m') %>
 		</div>
 	</div>
 </section>
